Pointed to local jquery file instead of CDN

--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -62,7 +62,7 @@
 
     <!--Toast popup html tag-->
     <div id="myToast" class="toast-popup"></div>
-    <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+    <script src="js/jquery-2.2.0.min.js"></script>
     <script src="js/toast-notification-popup.js"></script>
     <script>
         function showToast() {
