--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -55,8 +55,8 @@
 <body>
     <div class="container">
         <h3>Toast popup demo</h3>
-        <label>Your custom message:</label>
-        <textarea id="customMessage">my custom toast notification!</textarea>
+        <label>Try your custom message:</label>
+        <textarea id="customMessage">Product was successfully added to your cart!!</textarea>
         <input type="button" value="Show Toast" onclick="showToast()" />
     </div>
 
