--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container">
         <h3>Toast popup demo</h3>
-        <label>Try your custom message:</label>
+        <label>Try your custom messages:</label>
         <textarea id="customMessage">Product was successfully added to your cart!!</textarea>
         <input type="button" value="Show Toast" onclick="showToast()" />
     </div>
