--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <!--
   Toast notification popup jQuery plugin demo
-  (c) 2016 Nupin Mathew <nupin_mathew@infosys.com>
+  (c) 2016 Nupin Mathew <nupindev@gmail.com>
   License: MIT
 -->
 <html>
