--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -56,7 +56,7 @@
     <div class="container">
         <h3>Toast popup demo</h3>
         <label>Try your custom messages:</label>
-        <textarea id="customMessage">Product was successfully added to your cart!!</textarea>
+        <textarea id="customMessage" placeholder="type your custom messages"></textarea>
         <input type="button" value="Show Toast" id="btnShow" />
     </div>
 
