--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -12,6 +12,7 @@
     <style>
         body {
             font-family: Arial;
+            background-image: url(http://www.wallpapereast.com/static/images/patterns-stripes-wallpaper-1920x1080-wallpaper-pattern.png);
         }
 
         .container {
