--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -72,7 +72,7 @@
         <label>Try your custom messages:</label>
         <textarea id="customMessage" placeholder="type your custom messages"></textarea>
         <div class="toast-mode">
-            <input type="radio" name="mode" value="info" checked/> <span>Normal</span>
+            <input type="radio" name="mode" value="info" checked/> <span>Info</span>
             <input type="radio" name="mode" value="success"/> <span>Success</span>
             <input type="radio" name="mode" value="warning"/> <span>Warning</span>
             <input type="radio" name="mode" value="error"/> <span>Error</span>
