--- a/toast-popup-demo2.html
+++ b/toast-popup-demo2.html
@@ -91,6 +91,16 @@
                     id: 1003,
                     name: 'Mathew',
                     age: 14
+                },
+                {
+                    id: 1004,
+                    name: 'John',
+                    age: 16
+                },
+                {
+                    id: 1005,
+                    name: 'Joy',
+                    age: 15
                 }
             ];
 
