--- a/toast-popup-demo2.html
+++ b/toast-popup-demo2.html
@@ -150,7 +150,7 @@
                     setTimeout(function () {
                         updateTable();
                         $("#myToast").showToast({
-                            message: 'Student added successfully!',
+                            message: 'Student added to table successfully!',
                             timeout: 2500,
                             mode: 'success'
                         });
