--- a/toast-popup-demo.html
+++ b/toast-popup-demo.html
@@ -101,7 +101,7 @@
                 if (customMessage != "" && customMessage != undefined) {
                     $("#myToast").showToast({
                         message: customMessage,
-                        timeout: 2000,
+                        duration: 2000,
                         mode: currentMode
                     });
                 } else {
