Udpate demo html for the new folder change

--- a/toast-popup-demo2.html
+++ b/toast-popup-demo2.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8" />
     <title>Toast notification popup demo2</title>
     <link href="bower_component/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/toast-notification-popup.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="toast-popup/css/toast-notification-popup.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -72,7 +72,7 @@
 
     <script src="bower_component/jquery/jquery-2.2.0.min.js"></script>
     <script src="bower_component/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/toast-notification-popup.js"></script>
+    <script src="toast-popup/js/toast-notification-popup.js"></script>
     <script>
         $(function () {
             //Student Model: Initial valies
