--- a/examples/toast-popup-demo.html
+++ b/examples/toast-popup-demo.html
@@ -39,6 +39,8 @@
 
             .container textarea {
                 width: 100%;
+                height: 130px;
+                resize: none;
                 margin-bottom: 10px;
             }
 
